# MSc_Real-Time-Rendering

./: .gitignore  LICENSE  README.md
project/: CMakeLists.txt  cinclude-for-project-includes.txt  credits.txt  source.dot
project/app/src/: Airplane.cpp  Airplane.h  Light.cpp  Light.h  MinotaursMaze.cpp  MinotaursMaze.h  Simulation.cpp  Simulation.h  Skybox.cpp  Skybox.h  Teapot.cpp  Teapot.h  main.cpp
project/app/src/GameObjects/: Cube.cpp  Cube.h  Minotaur.cpp  Minotaur.h  Steve.cpp  Steve.h  Torch.cpp  Torch.h
project/app/src/MapGeneration/: ProceduralMaze.cpp  ProceduralMaze.h  Tile.h
project/app/src/Scripts/: CamController.cpp  CamController.h
project/assets/3d-objects/: cube.fbx  j22.fbx  minotaur.fbx  own_torch.fbx
project/assets/shaders/: betterVertexShader.vert  frag-blinn_phong.frag  frag-cook_torrance.frag  frag-depth_mapping.frag  frag-glassy.frag  frag-material_debug_unlit.frag  frag-skybox.frag  frag-sprite_unlit.frag  frag-toon.frag  fragmentShader.frag  spriteFragmentShader.frag  vert-geometry_debug.vert  vert-no_normals.vert  vert-shader3D.vert  vert-skybox.vert  vertexShader.vert
project/engine/: CMakeLists.txt
project/engine/include/: EisEngine.h
project/engine/include/engine/: Components.h  Context.h  Game.h  ResourceManager.h  Systems.h  Utilities.h
project/engine/src/: Context.cpp  Game.cpp  ResourceManager.cpp
project/engine/src/components/: Animator.cpp  BoxCollider2D.cpp  CubemapRenderer.cpp  PhysicsBody2D.cpp  PointLight.cpp  Renderer.cpp  Transform.cpp
project/engine/src/ecs/: Component.cpp  ComponentManager.cpp  (+2 more)
(+70 files in other folders)
